# api-gsc-glpi

./: pyproject.toml  state.json
logs/: 20260309_121627_GetList_Abertura_200_49ed033d_req.xml  20260309_121627_GetList_Reiteracao_200_97276361_resp.xml  20260309_121909_GetList_Abertura_200_4f223ba4_resp.xml  20260309_122209_GetList_Reiteracao_200_67eff786_req.xml
src/api_gsc_glpi/: anexos.py  caixa_client.py  cli.py  config.py  glpi_client.py  glpi_updates.py  processors.py  utils.py  worker.py
